# skillfoundry-products

./: .gitignore  README.md  package.json  pnpm-workspace.yaml  pyproject.toml  render.yaml
deploy/: REMOTE_PLATFORM.md  skillfoundry-gateway.nginx.conf
docs/: ADVERSARIAL_REVIEW_PRIMITIVES.md  BUILD_NEXT_PORTFOLIO.md  CASHFLOW_ENGINE.md  HYPOTHESIS_TEMPLATE.md  LEARNING_LAB.md  PORTFOLIO_INTAKE.md  (+4 more)
mechanisms/bottleneck-radar/: README.md  pyproject.toml  render.yaml
mechanisms/bottleneck-radar/src/bottleneck_radar_server/: analysis.py  app.py
mechanisms/bottleneck-radar/tests/: test_app.py
products/launchpad-lint/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  railway.toml  render.yaml  server.json
products/launchpad-lint/deploy/: .env.production.example  DEPLOYMENT_SURFACES.md  REMOTE_DEPLOY.md  launchpad-lint.service  smoke_check.sh
products/launchpad-lint/docs/: ADVERSARIAL_REVIEW_SPEC.md  CHANNEL_EXPERIMENT_TEMPLATE.md  CHANNEL_STATUS.md  MONETIZATION_CHANNELS.md  OPERATOR_MONETIZATION_RUNBOOK.md  OPERATOR_TODO.md  REVENUE_HYPOTHESIS.md  activation-spec.md  agenticmarket-listing.md  agenticmarket-submission.md  channel-experiment-agenticmarket.md  channel-experiment-mcp-registry.md  channel-experiment-smithery.md  mcp-registry-submission.md  openapi.yaml  smithery-submission.md
products/launchpad-lint/src/launchpad_lint/: __init__.py  analysis.py  app.py  feedback_store.py  metadata.py  models.py  telemetry.py
products/launchpad-lint/tests/: test_analysis.py  test_app.py  test_feedback.py  test_metadata.py  test_telemetry.py
(+54 files in other folders)
