[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bottleneck-radar-mechanism"
version = "0.1.0"
description = "Internal MCP mechanism that turns noisy builder signals into ranked bottlenecks and concise opportunity briefs."
requires-python = ">=3.12"
dependencies = [
  "mcp[cli]>=1.9.4",
  "starlette>=0.37.2",
  "uvicorn>=0.30.1",
  "httpx>=0.27.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
bottleneck-radar-mechanism = "bottleneck_radar_server.app:run"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
